# home-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: deploy-service.yml  manual-deploy.yml
android-widget/: gradle.properties  settings.gradle.kts
android-widget/app/: build.gradle.kts
android-widget/app/src/main/: AndroidManifest.xml
android-widget/app/src/main/res/drawable/: blue_rounded_border.xml  blue_rounded_square.xml  ic_more_vert.xml  ic_refresh.xml  rectangular_border.xml
android-widget/app/src/main/res/layout/: transit_clock_widget.xml  transit_clock_widget_configure.xml  trip_item.xml
android-widget/app/src/main/res/values-night/: themes.xml
android-widget/app/src/main/res/values-night-v31/: themes.xml
android-widget/gradle/: libs.versions.toml
android-widget/gradle/wrapper/: gradle-wrapper.properties
backend/: README.md  main.py  pyproject.toml
backend/grand_lyon_data/sytral/: base_stryal_api.py
backend/infra/: inventory.tpl  setup-vps.yml
backend/modules/trips/: trips.py
kde-transit-widget/: README.md  install.sh
kde-transit-widget/package/: metadata.json
kde-transit-widget/package/contents/config/: main.xml
kde-transit-widget/package/contents/ui/: CompactRepresentation.qml  ConfigGeneral.qml  FullRepresentation.qml  main.qml
service/: README.md  main.py
service/grand_lyon_data/: grand_lyon_api.py
service/grand_lyon_data/sytral/: incident_api.py  next_passage_api.py
service/infra/templates/: home-dashboard.service  nginx-site.conf.j2
service/modules/trips/: gtfs.py  leg.py  trips.py
(+12 files in other folders)
